deployment/kubernetes-manifests/kubewatch.deployment.yaml
# This Deployment manifest defines:
# - single-replica deployment of the container image, with label "app: node-hello-world"
# - Pod exposes port 8080
# - specify PORT environment variable to the container process
# Syntax reference https://kubernetes.io/docs/concepts/configuration/overview/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubewatch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubewatch
  template:
    metadata:
      labels:
        app: kubewatch
    spec:
      containers:
        - name: server
          image: <Your image should be here>
          ports:
            - containerPort: 8080
