deployment/kubernetes-manifests/kubewatch.service.yaml
# This Service manifest defines:
# - exposing the application to the public Internet (type:LoadBalancer)
# - routes port 80 of the load balancer to the port 8080 of the Pods.
# Syntax reference https://kubernetes.io/docs/concepts/configuration/overview/
apiVersion: v1
kind: Service
metadata:
  name: kubewatch-external
spec:
  type: ClusterIP
  selector:
    app: kubewatch
  ports:
    - name: http
      port: 80
      targetPort: 8080
