deployment/kubernetes-manifests/kubewatch.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubewatch-ingress
  labels:
    name: kubewatch-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: kubewatch-external
            port: 
              number: 80
